@@ -184,3 +184,6 @@ ignore,	   0x441ED0,	0x0,		"Map_get_x_dist",				"int (__fastcall *) (Map * this,
 ignore,	   0x437970,	0x0,		"Map_get_y_dist",				"int (__fastcall *) (Map * this, int edx, int y1, int y2)"
 ignore,	   0x452510,	0x454600,	"ai_move_defensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,	   0x56D040,	0x5799C0,	"find_nearest_city",				"City * (__cdecl *) (int tile_x, int tile_y, int owner_id, int continent_id, int ignore_owner_id, int perspective_id, City * ignore_city)"
+
+define,	   0x5BE470,	0x5CD030,	"Unit_get_max_move_points",			"int (__fastcall *) (Unit * this)"
+repl call, 0x5C190B,	0x5D0493,	"Unit_get_move_points_after_airdrop",		""
