@@ -107,3 +107,4 @@ enable_ai_city_location_desirability_display = true
 
 zero_corruption_when_off = true
 disallow_land_units_from_settling_water = true
+dont_end_units_turn_after_airdrop = false
