@@ -1,4 +1,5 @@
 - Better logic for grouping units on right click menu
+- Option to let units move after airdropping
 
 * RELEASE 9
 - Perfume can be applied to multiple improvements or unit types
